# ot-harjoitustyo

./: README.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/1-3/: .gitignore  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .gitignore
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssikaavio.md
tilix-app/: .coveragerc  .gitignore  pyproject.toml  tasks.py
tilix-app/src/: build.py  config.py  db.py  index.py
tilix-app/src/entities/: account.py  transaction.py
tilix-app/src/repositories/: account_repository.py  transaction_repository.py  user_repository.py
tilix-app/src/services/: account_services.py  transaction_services.py  user_services.py
tilix-app/src/tests/: account_test.py  transaction_test.py  user_test.py
tilix-app/src/ui/: accounts_view.py  login_view.py  new_account_view.py  register_view.py  transactions_view.py  ui.py
